# GitLab-Forward-Pages

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS  Dockerfile  MANIFEST.IN  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  index.rst
gl_pages_forward/: main.py
gl_pages_forward/rsc/: security.txt.j2
src/gl_pages_forward/: __init__.py  main.py  skeleton.py
src/gl_pages_forward/rsc/: overview.html.j2
tests/: conftest.py  test_skeleton.py
