[tool.poetry]
name = "gl-pages-forward"
version = "0.1.0"
description = ""
authors = ["Patrick Stoeckle <patrick.stoeckle@tum.de>"]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "*"
click = "*"
"ruamel.yaml" = "*"
minify-html = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-forward-pages = 'gl_pages_forward.main:create_html_pages'
