[tool.poetry]
name = "gl-pages-forward"
version = "0.1.1"
description = ""
authors = ["Patrick Stoeckle <patrick.stoeckle@tum.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
jinja2 = "*"
"ruamel.yaml" = "*"
typer = "^0.4.0"
Jinja2 = "^3.0.3"
minify-html = "0.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
lxml = "^4.7.1"
types-setuptools = "^57.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-forward-pages = 'gl_pages_forward.main:app'
